# PixelPilot_rk

./: .gitignore  .gitmodules  CMakeLists.txt  config_osd.json  gsmenu.sh  lv_conf.h  menu.yml  xcompile.sh
.github/workflows/: build.yml
shaders/: colortrans.glsl
src/: GPIOManager.cpp  GPIOManager.hpp  MenuConfig.hpp  drm.c  drm.h  dvr.cpp  dvr.h  gpio.cpp  gpio.h  gstdvrreceiver.cpp  gstdvrreceiver.h  gstrtpreceiver.cpp  gstrtpreceiver.h  main.cpp  main.h  menu_system.cpp  menu_system.hpp  msp.c  msp.h  nuklear_settings.h  osd.c  osd.cpp  osd.h  processing_gl.cpp  processing_gl.hpp  processing_pipeline.cpp  processing_pipeline.hpp
src/gsmenu/: air_presets.c  air_simple.c  air_simple.h  executor.c  executor.h  gs_system.c  helper.c  ui.c  ui.h
src/msp/: msp.h  msp_displayport.h  msp_protocol.h
